--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="utf-8">
-<title>Mappa Verona – SpG (ver1.0)</title>
+<title>Mappa Verona – SpG</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
@@ -24,7 +24,7 @@ html, body {
   padding: 14px 16px;
   background: rgba(5,5,5,.94);
   border-left: 4px solid #00ff9c;
-  min-width: 360px;
+  min-width: 340px;
   box-shadow: 0 0 20px rgba(0,0,0,.85);
 }
 
@@ -81,23 +81,36 @@ html, body {
   margin-bottom: 6px;
 }
 
+/* link materiali */
+#farm-materiali {
+  margin-top: 6px;
+  font-size: 11px;
+}
+#farm-materiali a {
+  color: #9ef5d9;
+  text-decoration: none;
+}
+#farm-materiali a:hover {
+  text-decoration: underline;
+}
+
 /* legenda */
 .legend-row {
   display: flex;
   align-items: center;
-  gap: 8px;
-  font-size: 12px;
+  gap: 6px;
+  font-size: 11px;
 }
 .dot {
-  width: 14px;
-  height: 14px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
 }
 .triangle {
   width: 0; height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 14px solid;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 12px solid;
 }
 
 /* colori stato */
@@ -105,6 +118,37 @@ html, body {
 .in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff; }
 .da_contattare { background:#ffaa00; border-bottom-color:#ffaa00; }
 .rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d; }
+
+/* buttons */
+.hud-buttons {
+  margin-top: 12px;
+  display: flex;
+  gap: 6px;
+}
+.hud-btn {
+  border:1px solid #00ff9c;
+  background:#041812;
+  color:#eafff7;
+  font-size:11px;
+  padding:4px 8px;
+  cursor:pointer;
+}
+.hud-btn:hover {
+  background:#00ff9c;
+  color:#00110b;
+}
+
+/* referenti */
+.hud-section {
+  margin-top: 10px;
+  border-top: 1px solid #222;
+  padding-top: 6px;
+  display: none;
+}
+.hud-section li {
+  font-size: 12px;
+  color: #fff;
+}
 
 /* label comuni */
 .label-comune {
@@ -137,14 +181,31 @@ html, body {
     </div>
   </div>
 
+  <!-- FARMACIE -->
   <div id="farm-box">
     <h4>Farmacie (comune selezionato)</h4>
-    <div id="farm-count">—</div>
+    <div id="farm-count">0 farmacie</div>
 
     <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
-    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
     <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
+    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
     <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
+
+    <div id="farm-materiali">
+      Materiali campagna:<br>
+      <a href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm" target="_blank">
+        Cartella Google Drive SpG Verona
+      </a>
+    </div>
+  </div>
+
+  <div class="hud-buttons">
+    <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
+    <button class="hud-btn" id="btnToggle">Vedi referenti</button>
+  </div>
+
+  <div class="hud-section" id="refPanel">
+    <ul id="refList"></ul>
   </div>
 </div>
 
@@ -159,37 +220,44 @@ L.tileLayer(
   { maxZoom:18 }
 ).addTo(map);
 
-/* DATI */
-const driveMateriali = "https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm";
+/* DATI REFERENTI (puoi espandere) */
+const referenti = {
+  "Verona": ["Vincenzo R."]
+};
 
-const referenti = { "Verona": ["Vincenzo R."] };
-
+/* FARMACIE DI ESEMPIO (SOLO PER PRESENTAZIONE) */
 const farmacie = [
-  {
-    nome:"Farmacia Centrale",
-    comune:"Verona",
-    lat:45.4387, lng:10.9921,
-    tipo:"privata",
-    stato:"accetta",
-    indirizzo:"Via Roma 3, Verona",
-    telefono:"+39 045 8000001"
-  },
-  {
-    nome:"Farmacia San Zeno",
-    comune:"Verona",
-    lat:45.4431, lng:10.9802,
-    tipo:"comunale",
-    stato:"in_trattativa",
-    indirizzo:"Via San Zeno 15, Verona",
-    telefono:"+39 045 8000002"
-  }
+  {nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta"},
+  {nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa"},
+  {nome:"Farmacia Borgo Roma", comune:"Verona", lat:45.389, lng:10.982, tipo:"privata", stato:"da_contattare"}
 ];
 
-let labels=[], comuni=[], selectedLayer=null;
+const DRIVE_URL = "https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm";
+
+let labels=[], comuni=[];
+let selectedLayer=null;
+let refVisibili=false;
 let farmLayer=L.layerGroup().addTo(map);
+
+/* HUD */
+const hudTitle=document.getElementById('hudTitle');
+const hudSub=document.getElementById('hudSub');
+const refPanel=document.getElementById('refPanel');
+const refList=document.getElementById('refList');
 
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
 const hasRef=n=>referenti[n] && referenti[n].length>0;
+
+/* Helper stato farmacie */
+function labelStato(cod){
+  switch(cod){
+    case "accetta": return "accetta";
+    case "in_trattativa": return "in trattativa";
+    case "da_contattare": return "da contattare";
+    case "rifiuta": return "rifiuta";
+    default: return cod || "";
+  }
+}
 
 /* COMUNI */
 fetch('data/comuni_verona.json')
@@ -207,11 +275,13 @@ fetch('data/comuni_verona.json')
     },
     onEachFeature:(f,l)=>{
       const nome=nomeComune(f.properties);
+
       const lab=L.marker(l.getBounds().getCenter(),{
         icon:L.divIcon({className:'label-comune',html:nome}),
         interactive:false
       }).addTo(map);
       labels.push(lab);
+
       l.on('click',()=>selezionaComune(l,nome));
     }
   }).addTo(map);
@@ -235,7 +305,7 @@ function gestioneZoom(){
     hudTitle.innerText='Provincia di Verona';
     hudSub.innerText='Vista generale';
     farmLayer.clearLayers();
-    document.getElementById('farm-count').innerText='—';
+    document.getElementById('farm-count').innerText='0 farmacie';
   }
   labels.forEach(l=>{
     if(!selectedLayer && z<=12) map.addLayer(l);
@@ -254,11 +324,12 @@ function selezionaComune(layer,nome){
   }
   selectedLayer=layer;
   layer.setStyle({ color:'#ffffff', weight:3 });
+
   map.fitBounds(layer.getBounds(),{ padding:[40,40] });
 
   hudTitle.innerText='Comune di '+nome;
   hudSub.innerText=hasRef(nome)
-    ?'Referenti presenti'
+    ?'Referenti presenti: '+referenti[nome].length
     :'⚠ Comune orfano';
 
   labels.forEach(l=>map.removeLayer(l));
@@ -272,25 +343,23 @@ function mostraFarmacie(comune){
   document.getElementById('farm-count').innerText=vis.length+' farmacie';
 
   vis.forEach(f=>{
-    const html=f.tipo==="privata"
+    const simbolo=f.tipo==="privata"
       ? `<div class="dot ${f.stato}"></div>`
       : `<div class="triangle ${f.stato}"></div>`;
 
-    const popup = `
+    const mapsUrl = `https://www.google.com/maps?q=${f.lat},${f.lng}`;
+
+    const popupHtml = `
       <strong>${f.nome}</strong><br>
-      ${f.indirizzo}<br>
-      ${f.telefono || ''}<br><br>
-      <a href="${driveMateriali}" target="_blank">
-        📁 Materiali di campagna (Drive)
-      </a><br>
-      <a href="https://maps.google.com/?q=${f.lat},${f.lng}" target="_blank">
-        🧭 Apri su Maps
-      </a>
+      ${f.tipo}<br>
+      Stato: ${labelStato(f.stato)}<br>
+      <a href="${mapsUrl}" target="_blank">Apri in Maps</a><br>
+      <a href="${DRIVE_URL}" target="_blank">Materiali campagna (Drive)</a>
     `;
 
     const m=L.marker([f.lat,f.lng],{
-      icon:L.divIcon({html:html,iconSize:[16,16]})
-    }).bindPopup(popup);
+      icon:L.divIcon({html:simbolo,iconSize:[14,14]})
+    }).bindPopup(popupHtml);
 
     farmLayer.addLayer(m);
   });
@@ -301,6 +370,42 @@ function aggiornaContatori(){
   const ok=comuni.filter(n=>hasRef(n)).length;
   document.getElementById('cntOk').innerText=ok;
   document.getElementById('cntOrfani').innerText=comuni.length-ok;
+}
+
+/* REFERENTI */
+document.getElementById('btnAdd').onclick=()=>{
+  if(!selectedLayer) return alert('Seleziona un comune');
+  const nome=hudTitle.innerText.replace('Comune di ','');
+  const n=prompt('Inserisci il tuo nome');
+  if(!n) return;
+  if(!referenti[nome]) referenti[nome]=[];
+  referenti[nome].push(n);
+  hudSub.innerText='Referenti presenti: '+referenti[nome].length;
+  aggiornaContatori();
+  if(refVisibili) mostraReferenti(nome);
+};
+
+document.getElementById('btnToggle').onclick=()=>{
+  refVisibili=!refVisibili;
+  document.getElementById('btnToggle').innerText=
+    refVisibili?'Nascondi referenti':'Vedi referenti';
+
+  if(refVisibili && selectedLayer){
+    mostraReferenti(hudTitle.innerText.replace('Comune di ',''));
+  } else {
+    refPanel.style.display='none';
+  }
+};
+
+function mostraReferenti(nome){
+  refList.innerHTML='';
+  const lista=referenti[nome]||[];
+  lista.forEach(r=>{
+    const li=document.createElement('li');
+    li.textContent=r;
+    refList.appendChild(li);
+  });
+  refPanel.style.display='block';
 }
 </script>
 
