--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html lang="it">
 <head>
 <meta charset="utf-8">
-<title>Mappa Verona – SpG (ver1.0)</title>
+<title>Mappa Verona – SpG</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
 <style>
-html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-serif }
-#map { position:absolute; inset:0; background:#050505 }
+html, body {
+  margin: 0;
+  height: 100%;
+  background: #000;
+  font-family: system-ui, sans-serif;
+}
+#map { position:absolute; inset:0; background:#050505; }
 
 /* HUD */
 #hud {
-  position:fixed; top:18px; left:18px; z-index:9999;
-  padding:14px 16px;
-  background:rgba(5,5,5,.94);
-  border-left:4px solid #00ff9c;
-  min-width:360px;
-  box-shadow:0 0 20px rgba(0,0,0,.85);
+  position: fixed;
+  top: 18px;
+  left: 18px;
+  z-index: 9999;
+  padding: 14px 16px;
+  background: rgba(5,5,5,.94);
+  border-left: 4px solid #00ff9c;
+  min-width: 360px;
+  box-shadow: 0 0 20px rgba(0,0,0,.85);
 }
 
 .hud-title { font-size:18px; font-weight:650; color:#fff; text-transform:uppercase }
@@ -51,10 +59,13 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-
 }
 #farm-count { font-size:12px; margin-bottom:6px }
 
-/* LEGGENDA */
+/* LEGENDA */
 .legend-row {
-  display:flex; align-items:center; gap:8px;
-  font-size:12px; color:#e6e6e6;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  font-size:12px;
+  color:#e6e6e6;
 }
 .dot { width:14px; height:14px; border-radius:50% }
 .triangle {
@@ -63,17 +74,13 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-
   border-right:8px solid transparent;
   border-bottom:14px solid;
 }
-
 .accetta { background:#00ff9c; border-bottom-color:#00ff9c }
 .in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff }
 .da_contattare { background:#ffaa00; border-bottom-color:#ffaa00 }
 .rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d }
 
 /* BOTTONI */
-.hud-buttons {
-  margin-top:12px;
-  display:flex; gap:6px;
-}
+.hud-buttons { margin-top:12px; display:flex; gap:6px }
 .hud-btn {
   border:1px solid #00ff9c;
   background:#041812;
@@ -98,7 +105,7 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-
 
 /* LABEL COMUNI */
 .label-comune {
-  color:#fff;
+  color:#ffffff;
   font-size:11px;
   text-shadow:0 0 6px rgba(0,0,0,.9);
   pointer-events:none;
@@ -131,9 +138,9 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-
     <h4>Farmacie (comune selezionato)</h4>
     <div id="farm-count">—</div>
 
-    <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
+    <div class="legend-row"><span class="dot accetta"></span> Privata – favorevole</div>
     <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
-    <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
+    <div class="legend-row"><span class="triangle accetta"></span> Comunale – favorevole</div>
     <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
   </div>
 
@@ -149,22 +156,20 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui,sans-
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-const map=L.map('map',{attributionControl:false}).setView([45.43,10.99],10);
+const map=L.map('map',{ attributionControl:false }).setView([45.43,10.99],10);
 L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{maxZoom:18}).addTo(map);
 
 const DRIVE_URL="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm";
 
-/* REFERENTI */
+/* DATI */
 const referenti={ "Verona":["Vincenzo R."] };
-
-/* FARMACIE REALI DI VERONA */
 const farmacie=[
  {nome:"Farmacia Centrale",comune:"Verona",lat:45.4387,lng:10.9921,tipo:"privata",stato:"accetta"},
  {nome:"Farmacia San Zeno",comune:"Verona",lat:45.4431,lng:10.9802,tipo:"comunale",stato:"in_trattativa"},
  {nome:"Farmacia Borgo Roma",comune:"Verona",lat:45.3898,lng:10.9825,tipo:"privata",stato:"da_contattare"}
 ];
 
-let labels=[],comuni=[],selectedLayer=null,refVisibili=false;
+let labels=[], comuni=[], selectedLayer=null, refVisibili=false;
 let farmLayer=L.layerGroup().addTo(map);
 
 const hudTitle=document.getElementById('hudTitle');
@@ -173,8 +178,9 @@ const refPanel=document.getElementById('refPanel');
 const refList=document.getElementById('refList');
 
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
-const hasRef=n=>referenti[n]?.length>0;
+const hasRef=n=>referenti[n] && referenti[n].length>0;
 
+/* COMUNI */
 fetch('data/comuni_verona.json')
 .then(r=>r.json())
 .then(data=>{
@@ -182,7 +188,7 @@ fetch('data/comuni_verona.json')
     style:f=>{
       const n=nomeComune(f.properties);
       comuni.push(n);
-      return {color:hasRef(n)?'#00ff9c':'#ffaa00',weight:1,fillOpacity:0}
+      return { color:hasRef(n)?'#00ff9c':'#ffaa00', weight:1, fillOpacity:0 };
     },
     onEachFeature:(f,l)=>{
       const nome=nomeComune(f.properties);
@@ -194,9 +200,20 @@ fetch('data/comuni_verona.json')
       l.on('click',()=>selectComune(l,nome));
     }
   }).addTo(map);
+
   map.fitBounds(layer.getBounds());
   updateStats();
+  map.on('zoomend', handleZoom);
+  handleZoom();
 });
+
+function handleZoom(){
+  const z=map.getZoom();
+  labels.forEach(l=>{
+    if(!selectedLayer && z<=12) map.addLayer(l);
+    else map.removeLayer(l);
+  });
+}
 
 function selectComune(layer,nome){
   if(selectedLayer){
@@ -206,16 +223,16 @@ function selectComune(layer,nome){
   selectedLayer=layer;
   layer.setStyle({color:'#fff',weight:3});
   map.fitBounds(layer.getBounds(),{padding:[40,40]});
-  hudTitle.textContent="Comune di "+nome;
-  hudSub.textContent=hasRef(nome)?`Referenti: ${referenti[nome].length}`:"⚠ Comune orfano";
-  labels.forEach(l=>map.removeLayer(l));
+  hudTitle.innerText="Comune di "+nome;
+  hudSub.innerText=hasRef(nome)?`Referenti: ${referenti[nome].length}`:"⚠ Comune orfano";
+  handleZoom();
   showFarmacie(nome);
 }
 
 function showFarmacie(comune){
   farmLayer.clearLayers();
   const vis=farmacie.filter(f=>f.comune===comune);
-  document.getElementById('farm-count').textContent=vis.length+" farmacie";
+  document.getElementById('farm-count').innerText=vis.length+" farmacie";
   vis.forEach(f=>{
     const symbol=f.tipo==="privata"
       ? `<div class="dot ${f.stato}"></div>`
@@ -234,27 +251,27 @@ function showFarmacie(comune){
 
 function updateStats(){
   const ok=comuni.filter(n=>hasRef(n)).length;
-  document.getElementById('cntOk').textContent=ok;
-  document.getElementById('cntOrfani').textContent=comuni.length-ok;
+  document.getElementById('cntOk').innerText=ok;
+  document.getElementById('cntOrfani').innerText=comuni.length-ok;
 }
 
 /* REFERENTI */
 document.getElementById('btnAdd').onclick=()=>{
   if(!selectedLayer) return alert("Seleziona un comune");
-  const nome=hudTitle.textContent.replace("Comune di ","");
+  const nome=hudTitle.innerText.replace("Comune di ","");
   const n=prompt("Nome referente");
   if(!n) return;
   if(!referenti[nome]) referenti[nome]=[];
   referenti[nome].push(n);
-  hudSub.textContent=`Referenti: ${referenti[nome].length}`;
+  hudSub.innerText=`Referenti: ${referenti[nome].length}`;
   updateStats();
 };
 
 document.getElementById('btnToggle').onclick=()=>{
   refVisibili=!refVisibili;
-  document.getElementById('btnToggle').textContent=refVisibili?"Nascondi referenti":"Vedi referenti";
+  document.getElementById('btnToggle').innerText=refVisibili?"Nascondi referenti":"Vedi referenti";
   if(refVisibili && selectedLayer){
-    const nome=hudTitle.textContent.replace("Comune di ","");
+    const nome=hudTitle.innerText.replace("Comune di ","");
     refList.innerHTML="";
     (referenti[nome]||[]).forEach(r=>{
       const li=document.createElement('li'); li.textContent=r;
